# yolov11-12-opencv-cuda-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: Inference.hpp
model/: convert_pt_to_onnx_model.py
src/: Inference.cpp  main.cpp
